src/objects/LRN_Result__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exam_Id__c</fullName>
        <label>Exam Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Size__c</fullName>
        <label>Exam Size</label>
        <picklist>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LRN_Exam_Template__c</fullName>
        <label>LRN Exam Template</label>
        <referenceTo>LRN_Exam_Template__c</referenceTo>
        <relationshipName>LRN_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Num_Correct_Evaluated__c</fullName>
        <label>Num Correct Evaluated</label>
        <summarizedField>LRN_Result_Detail__c.Num_Correct_Evaluated__c</summarizedField>
        <summaryForeignKey>LRN_Result_Detail__c.LRN_Result__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Correct_Questions__c</fullName>
        <label>Num Correct Questions</label>
        <summarizedField>LRN_Result_Detail__c.Num_Correct_Questions__c</summarizedField>
        <summaryForeignKey>LRN_Result_Detail__c.LRN_Result__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Questions_Evaluated__c</fullName>
        <label>Num Questions Evaluated</label>
        <summarizedField>LRN_Result_Detail__c.Num_Questions_Evaluated__c</summarizedField>
        <summaryForeignKey>LRN_Result_Detail__c.LRN_Result__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Questions__c</fullName>
        <label>Num Questions</label>
        <summarizedField>LRN_Result_Detail__c.Num_Questions__c</summarizedField>
        <summaryForeignKey>LRN_Result_Detail__c.LRN_Result__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Evaluated__c</fullName>
        <formula>Num_Correct_Evaluated__c / Num_Questions_Evaluated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Evaluated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Score_Total__c</fullName>
        <formula>Num_Correct_Questions__c / Num_Questions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LRN_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LRN Result</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>LRN Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LRN Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>